# game-of-life

./: README.md  game-of-life.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Cell.hs
