cabal-version:       2.4
name:                game-of-life
version:             0.0.0
description:         Conway's Game Of Life
homepage:            https://github.com/rashadg1030/game-of-life
bug-reports:         https://github.com/rashadg1030/game-of-life/issues
author:              Rashad Gover
maintainer:          rashad.sasaki@gmail.com
category:            Game
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/rashadg1030/game-of-life.git

common common-options
  build-depends:       base
                     , containers
                     , grid-proto
                     , sdl2

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DerivingStrategies
                       DerivingVia
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       OverloadedLabels
                       RecordWildCards
                       ScopedTypeVariables
                       TypeApplications
                       TypeFamilies
                       TypeOperators

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Cell
                       Lib

executable game-of-life
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       game-of-life

test-suite game-of-life-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       game-of-life
  